forth/test/fail/test_local_name_non_ident.af
\ Must fail to compile.
fun: .test_local_name_non_ident { val-name -- err }
end
